# nut-grasp-maniskill

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_vastai.sh  train_ppo_rgbd.py
assets/objects/almond/: almond_single.glb
assets/objects/bowls/: almond_bowl.mtl
assets/objects/ginko/: Ginko_single.glb
assets/objects/table/: table.mtl
assets/objects/tray/: tray.mtl
assets/robot/: so101_agent.py
configs/: nut_grasp.yaml
envs/: nut_grasp_env.py
