[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nut-grasp-maniskill"
version = "0.1.0"
description = "SO-101 nut grasping task for ManiSkill3 sim-to-real"
requires-python = ">=3.10"
dependencies = [
    "mani-skill>=3.0.0b22",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["envs", "assets"]

[tool.hatch.build]
include = [
    "envs/**",
    "assets/**",
    "configs/**",
    "train_ppo_rgbd.py",
]
